// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordAnd2FA /> render() should always render with 2FA section 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Password & 2FA
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold inputField"
      >
        Update password
      </div>
      <form
        class=""
        novalidate=""
      >
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="old_password"
          >
            Current password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="old_password"
              name="old_password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="new_password"
          >
            New password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              aria-describedby="new_password-caption"
              class="input"
              id="new_password"
              name="new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              required=""
              type="password"
              value=""
            />
          </div>
          <div
            class="caption"
            id="new_password-caption"
          >
            <span>
              A password must contain a minimum of 14 characters, 1 lower case, 1 upper case and 1 number.
            </span>
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="confirm_new_password"
          >
            Confirm new password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="confirm_new_password"
              name="confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton fill primary medium"
          type="submit"
        >
          Update Password
        </button>
      </form>
      <div
        class="heading-subsection-semibold mb16"
      >
        Two-Factor Authentication (2FA)
        <div
          class="badge ml-3 "
        >
          Disabled
        </div>
      </div>
      <div
        class="body-regular mb16"
      >
        For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
      </div>
      <button
        class="wrapper mr-2 fill primary medium"
        type="button"
      >
        Enable 2FA
      </button>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without change password based on if the user has or not a password 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Password & 2FA
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold inputField"
      >
        Update password
      </div>
      <form
        class=""
        novalidate=""
      >
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="old_password"
          >
            Current password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="old_password"
              name="old_password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="new_password"
          >
            New password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              aria-describedby="new_password-caption"
              class="input"
              id="new_password"
              name="new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              required=""
              type="password"
              value=""
            />
          </div>
          <div
            class="caption"
            id="new_password-caption"
          >
            <span>
              A password must contain a minimum of 14 characters, 1 lower case, 1 upper case and 1 number.
            </span>
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="confirm_new_password"
          >
            Confirm new password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="confirm_new_password"
              name="confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton fill primary medium"
          type="submit"
        >
          Update Password
        </button>
      </form>
      <div
        class="heading-subsection-semibold mb16"
      >
        Two-Factor Authentication (2FA)
        <div
          class="badge ml-3 "
        >
          Disabled
        </div>
      </div>
      <div
        class="body-regular mb16"
      >
        For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
      </div>
      <button
        class="wrapper mr-2 fill primary medium"
        type="button"
      >
        Enable 2FA
      </button>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without change password based on if the user has or not a password 2`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      2FA
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold mb16"
      >
        Two-Factor Authentication (2FA)
        <div
          class="badge ml-3 "
        >
          Disabled
        </div>
      </div>
      <div
        class="body-regular mb16"
      >
        For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
      </div>
      <button
        class="wrapper mr-2 fill primary medium"
        type="button"
      >
        Enable 2FA
      </button>
    </div>
  </div>
</div>
`;
